# pre-commit-hook-git-crypt

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
changelog/: 0.feature  1.bugfix
src/pre_commit_hook_git_crypt/: check_git_crypt_status.py
tests/: test_pre_commit_hook_git_crypt.py
