[tool.poetry]
name = "pre-commit-hook-git-crypt"
version = "1.0.0"
description = "A pre-commit hook to avoid accidentally committing unencrypted files"
authors = ["Philip Douglass <philip@philipdouglass.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://pre-commit.com"
repository = "https://github.com/philipsd6/pre-commit-hook-git-crypt"
packages = [
    { include = "pre_commit_hook_git_crypt", from = "src" },
]
[tool.poetry.dependencies]
python = "^3.6.1"
pre-commit-hooks = "^4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pre-commit = "^2.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
check-git-crypt-status = "pre_commit_hook_git_crypt.check_git_crypt_status:main"

[tool.towncrier]
package = "pre_commit_hook_git_crypt"
package_dir = "src"
single_file = true  # if false, filename is formatted like `title_format`.
filename = "CHANGELOG.md"
directory = "changelog/"
all_bullets = true  # make all fragments bullet points
